eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 789326847655.dkr.ecr.ap-southeast-1.amazonaws.com/simplebank:a2198b50f9e7b5ce8dadf7d497c3d06b45bb3921
        ports:
        - containerPort: 8088
        - containerPort: 9099
