eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-bank-api-service
spec:
  selector:
    app: simple-bank-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8088

    - name: grpc
      protocol: TCP
      port: 9099
      targetPort: 9099
  type: LoadBalancer
